ipfs-cluster-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ipfs-cluster
spec:
  serviceName: ipfs-cluster
  replicas: 1
  selector:
    matchLabels:
      app: ipfs-cluster
  template:
    metadata:
      labels:
        app: ipfs-cluster
    spec:
      containers:
      - name: ipfs
        image: "ipfs/go-ipfs:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: swarm
          protocol: TCP
          containerPort: 4001
        - name: swarm-udp
          protocol: UDP
          containerPort: 4002
        - name: api
          protocol: TCP
          containerPort: 5001
        - name: ws
          protocol: TCP
          containerPort: 8081
        - name: http
          protocol: TCP
          containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: swarm
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 15
        volumeMounts:
        - name: ipfs-storage
          mountPath: /data/ipfs
        - name: configure-script
          mountPath: /custom
      - name: ipfs-cluster
        image: "ipfs/ipfs-cluster:latest"
        imagePullPolicy: IfNotPresent
        command: ["sh", "/custom/entrypoint.sh"]
        ports:
        - name: api-http
          containerPort: 9094
          protocol: TCP
        - name: proxy-http
          containerPort: 9095
          protocol: TCP
        - name: cluster-swarm
          containerPort: 9096
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: cluster-swarm
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: cluster-storage
          mountPath: /data/ipfs-cluster
        - name: configure-script
          mountPath: /custom
        resources:
          {}
      volumes:
      - name: configure-script
        configMap:
          name: ipfs-cluster-set-bootstrap-conf

  volumeClaimTemplates:
  - metadata:
      name: cluster-storage
    spec:
      storageClassName: local-path
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: ipfs-storage
    spec:
      storageClassName: local-path
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
