ipfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs
  labels:
    app: ipfs
spec:
  selector:
    app: ipfs
  ports:
  - name: swarm
    targetPort: swarm
    port: 4001
  - name: swarm-udp
    targetPort: swarm-udp
    port: 4002
  - name: api
    targetPort: api
    port: 5001
  - name: ws
    targetPort: ws
    port: 8081
  - name: http
    targetPort: http
    port: 8080
